# charred-rs

./: Cargo.toml  README.md
src/: error.rs  input.rs  input_reader.rs  lexer.rs  lib.rs  tapemachine.rs  token.rs  token_reader.rs  traits.rs
src/matching/: matchers.rs  mod.rs
src/tests/: mod.rs  test_input.rs  test_lexer.rs  test_matching.rs  test_token.rs  test_token_reader.rs
src/tokenizing/: lexer.rs  mod.rs  token.rs  token_reader.rs
src/utils/: input_reader.rs  mod.rs
