[package]
name = "charred"
version = "0.3.0"
authors = ["trivernis <trivernis@protonmail.com>"]
edition = "2018"
license-file = "LICENSE"
readme = "README.md"
description = "charred char checking"
repository = "https://github.com/Trivernis/charred-rs"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
