[package]
name = "charred"
version = "2.1.1"
authors = ["trivernis <trivernis@protonmail.com>"]
edition = "2018"
license-file = "LICENSE"
readme = "README.md"
description = "charred char checking"
repository = "https://github.com/Trivernis/charred-rs"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror = "1.0.24"
log = "0.4.14"

[dependencies.tokio]
version = "1.5.0"
features = ["io-util", "io-std", "fs"]

[dev-dependencies.tokio]
version = "1.5.0"
features = ["rt-multi-thread", "macros"]